# mgxpbd

./: .gitignore  CMakeLists-bak.txt  CMakeLists.txt  CMakePresets.json  README.md  auto.py  clean_build.ps1  clean_results.ps1  main.cpp  main.cu  vcpkg.json
data/: .gitignore
data/misc/: R.mtx  edge.txt
data/models/: bunny.off
scripts/: compute_R_P.py  compute_R_P_by_pyamg.py  convert_coo_csr.py  judge_positive_definite.cpp  judge_positive_definite.py  reproduce_pyamg.py
src/: cuda.cu  cuda.cuh  example.cpp  main.cpp  main.cu  my_python.c  utils.h
tools/viewer/: CMakeLists.txt  viewer.cpp
tools/visualizer/: CMakeLists.txt
